[gd_scene load_steps=2 format=3 uid="uid://c71gy2w886gek"]

[ext_resource type="Script" path="res://Components/pause_menu_component.gd" id="1_l54g5"]

[node name="PauseMenuComponent" type="Control"]
process_mode = 2
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l54g5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.670588, 0.670588, 0.670588, 0.494118)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -121.0
offset_right = 128.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="resume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="quit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="pixelate" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "pixelate"
icon_alignment = 1

[connection signal="pressed" from="Panel/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/pixelate" to="." method="_on_pixelate_pressed"]
